--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 
-server.port=9000
+#Configured Port Number
+server.port=8764
+
+#Application Name
+spring.application.name=oauth2service
 
 #MySQL
-
 spring.datasource.url=jdbc:mysql://localhost:3306/solar_local?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=@four123
@@ -15,3 +18,6 @@ spring.jpa.properties.hibernate.show_sql=true
 #spring.jpa.properties.hibernate.use_sql_comments=true
 #spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+#Eureka Properties
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
