--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
-			<version>2.0.0.RELEASE</version>
+			<!--<version>2.0.0.RELEASE</version>-->
 		</dependency>
 
 		<dependency>
